# crypto-benchmark

./: CMakeLists.txt  Makefile  bench_gcrypt.c  bench_gcrypt.h  main.c  smetest.c  sodium.c
